--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CalendarViewProject</string>
+    <string name="up_week">上\n一\n周</string>
+    <string name="next_week">下\n一\n周</string>
+    <string name="can_choose_time">可选预约时间</string>
 </resources>
